--- a/LandingPage.html
+++ b/LandingPage.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="body flex justify-around">
-        <div class="left min-w-48 justify-center bg-slate-200 align-middle">
+        <div class="left min-w-1/4 justify-center bg-slate-200 align-middle">
             <div class=" px-5 text-center text-6xl pt-36 pb-10">
                 Sell digital Products the easy-peasy-way
             </div>
